--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ This is the parent `<div>` that contains the menu and the content area.
     <div class="content">
       <div class="pure-g">
         <div class="pure-u-1 pure-u-sm-1-2">
-          <img class="pure-img-responsive" src="danny.jpg" alt="Daniel S. Abdi in the lights">
+          <img class="pure-img-responsive" src="danny.jpg" alt="Daniel S. Abdi in red">
         </div>
         <div class="pure-u-1 pure-u-sm-1-2">
           <div id="info">
@@ -288,8 +288,8 @@ This is the parent `<div>` that contains the menu and the content area.
               <dd><a href="mailto:dsabdi@nps.edu">dsabdi@nps.edu</a></dd>
               <dt><a href="mailto:dshawul@yahoo.com"><i class="fa fa-envelope"></i></a></dt>
               <dd><a href="mailto:dshawul@yahoo.com">dshawul@yahoo.com</a></dd>
-              <dt><a href="DanielAbdi.asc"><i class="fa fa-key"></i></a></dt>
-              <dd><small><a href="DanielAbdi.asc">A86F 3413 3871 6AF3 7938  8941 8F37 791F 87D1 85DA</a></small></dd>
+              <dt><a href="id_rsa.pub"><i class="fa fa-key"></i></a></dt>
+              <dd><small><a href="id_rsa.pub">Public key</a></small></dd>
             </dl>
           </div>
         </div>
@@ -312,9 +312,9 @@ This is the parent `<div>` that contains the menu and the content area.
           </li>
 
           <li>
-            <i class="fa-li fa fa-file-text-o"></i></a>
+            <i class="fa-li fa fa-file-text-o"></i>
             D. Abdi and G. Bitsuamlak, "Wind flow simulations in idealized built environment
-			models of various level of complexity," Wind and Structures, (under review)
+			models of various level of complexity," <em>Wind and Structures</em>, (under review)
           </li>
 
           <li>
@@ -340,7 +340,7 @@ This is the parent `<div>` that contains the menu and the content area.
           </li>
           <li>
             <a href="http://dx.doi.org/10.12989/was.2014.19.6.585"><i class="fa-li fa fa-file-text-o"></i></a>
-            D. Abdi and G. Bitsuamlak, "“Numerical evaluation of the effect of multiple roughness
+            D. Abdi and G. Bitsuamlak, "Numerical evaluation of the effect of multiple roughness
 			changes," <em>Wind and Structures</em>, vol. 19, no. 6, pp. 585–601, 2014. DOI:
             <a href="http://dx.doi.org/10.12989/was.2014.19.6.585">10.12989/was.2014.19.6.585</a>.
           </li>
@@ -355,7 +355,7 @@ This is the parent `<div>` that contains the menu and the content area.
             <a href="http://dx.doi.org/10.1061/9780784412626.087">10.1061/9780784412626.087</a>.
           </li>
           <li>
-            <i class="fa-li fa fa-file-text-o"></i></a>
+            <i class="fa-li fa fa-file-text-o"></i>
             D. Abdi and G. Bitsuamlak, "Assessing the effect of boundary conditions on simulating
 			atmospheric boundary layer," 2012, <em> Joint Conference EMI/PMC </em>
           </li>
@@ -364,17 +364,19 @@ This is the parent `<div>` that contains the menu and the content area.
         <li> <b>2010</b>
         <ul class="fa-ul">
           <li>
-            <i class="fa-li fa fa-file-text-o"></i></a>
+            <a href="ftp://ftp.atdd.noaa.gov/pub/cwe2010/Files/Papers/529_Abdi.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and G. Bitsuamlak, "Estimation of surface roughness using CFD," 2010, <em>The Fifth International Symposium on Computational Wind Engineering </em>
+			<a href="ftp://ftp.atdd.noaa.gov/pub/cwe2010/Files/Papers/529_Abdi.pdf">[link]</a>.
           </li>
         </ul>
 		
         <li> <b>2009</b>
         <ul class="fa-ul">
           <li>
-            <i class="fa-li fa fa-file-text-o"></i></a>
-            D. Abdi and G. Bitsuamlak, "Application of an artificial neural network model
+            <a href="http://www.iawe.org/Proceedings/11ACWE/11ACWE-Abdi.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
+            D. Abdi and S. Levine and G. Bitsuamlak, "Application of an artificial neural network model
 			for boundary layer wind tunnel profile development," 2009, <em>11th Americas conference on wind Engineering </em>
+			<a href="http://www.iawe.org/Proceedings/11ACWE/11ACWE-Abdi.pdf">[link]</a>.
           </li>
         </ul>
 
@@ -384,7 +386,7 @@ This is the parent `<div>` that contains the menu and the content area.
       <h2 id="life">Life</h2>
 	  
       <h3 id="photo">Photography</h3>
-      <p> I try to take pictures of the beautifuly city <em>Monterey</em> whenever I have the chance. </p>
+      <p> I try to take pictures of the beautiful city <em>Monterey</em> whenever I have the chance. </p>
 		  
       <h3 id="chess">Computer Chess</h3>
       <p> I spent so much time developing many <em>computer chess</em> programs. 
