Fix some broken links.

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ This is the parent `<div>` that contains the menu and the content area.
 
       <h2 id="research">Research</h2>
 
-      <p>My research interests primarily relate to scientific computation in engineering, specifically structural and wind engineering. 
+      <p>My research interests primarily relate to scientific computation in engineering, specifically wind and structural engineering. 
 		 During my PhD I developed a finite-volume code for the simulation of wind flow over complex terrain. Recently, I have extended the code
 	     to use high-order Discontinuous Galerkin methods.</p>
 
@@ -306,9 +306,9 @@ This is the parent `<div>` that contains the menu and the content area.
         <li> <b>Current</b>
         <ul class="fa-ul">
           <li>
-            <a href="http://arxiv.org/abs/1507.04769"><i class="fa-li fa fa-file-text-o"></i></a>
+            <a href="http://www.hindawi.com/journals/jcengi/aip/295393"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and G. Bitsuamlak, "Asynchronous parallelization of a CFD solver," Journal of Computational Engineering, 2015, (accepted)
-            <a href="http://arxiv.org/abs/1507.04769">http://www.hindawi.com/journals/jcengi/aip/295393/</a>.
+            <a href="http://www.hindawi.com/journals/jcengi/aip/295393">[link]</a>.
           </li>
 
           <li>
@@ -355,9 +355,10 @@ This is the parent `<div>` that contains the menu and the content area.
             <a href="http://dx.doi.org/10.1061/9780784412626.087">10.1061/9780784412626.087</a>.
           </li>
           <li>
-            <i class="fa-li fa fa-file-text-o"></i>
+            <a href="https://www.researchgate.net/publication/280322396_Assessing_the_effect_of_roughness_boundary_conditions_on_simulating_atmospheric_boundary_layer_flow"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and G. Bitsuamlak, "Assessing the effect of boundary conditions on simulating
 			atmospheric boundary layer," 2012, <em> Joint Conference EMI/PMC </em>
+			<a href="https://www.researchgate.net/publication/280322396_Assessing_the_effect_of_roughness_boundary_conditions_on_simulating_atmospheric_boundary_layer_flow">[link]</a>
           </li>
         </ul>
 		
@@ -386,7 +387,7 @@ This is the parent `<div>` that contains the menu and the content area.
       <h2 id="life">Life</h2>
 	  
       <h3 id="photo">Photography</h3>
-      <p> I try to take pictures of the beautiful city <em>Monterey</em> whenever I have the chance. </p>
+      <p> I try to take pictures of the beautiful city <em>Monterey</em> whenever I get the chance. </p>
 		  
       <h3 id="chess">Computer Chess</h3>
       <p> I spent so much time developing many <em>computer chess</em> programs. 
