Add links to codes.

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@ This is the parent `<div>` that contains the menu and the content area.
     <div class="pure-u-1 pure-u-md-1-3">
       <div class="pure-menu pure-menu-horizontal custom-can-transform">
         <ul class="pure-menu-list">
-          <!-- <li class="pure-menu-item"><a href="#teaching" class="pure-menu-link">Teaching</a></li> -->
           <li class="pure-menu-item"><a href="#research" class="pure-menu-link">Research</a></li>
           <li class="pure-menu-item"><a href="#life"     class="pure-menu-link">Life</a></li>
+		  <li class="pure-menu-item"><a href="#codes" class="pure-menu-link">Codes</a></li>
         </ul>
       </div>
     </div>
@@ -297,9 +297,9 @@ This is the parent `<div>` that contains the menu and the content area.
 
       <h2 id="research">Research</h2>
 
-      <p>My research interests primarily relate to scientific computation in engineering, specifically wind and structural engineering. 
-		 During my PhD I developed a finite-volume code for the simulation of wind flow over complex terrain. Recently, I have extended the code
-	     to use high-order Discontinuous Galerkin methods.</p>
+      <p>My research interests primarily relate to scientific computation in atmospheric sciences and civil engineering, specifically wind 
+		 and structural engineering. During my PhD I developed a finite-volume code for the simulation of wind flow over complex terrain. 
+		 Recently, I have extended the code to use high-order Discontinuous Galerkin methods.</p>
 
       <h3 id="publications">Publications</h3>
       <ul>
@@ -390,8 +390,19 @@ This is the parent `<div>` that contains the menu and the content area.
       <p> I try to take pictures of the beautiful city <em>Monterey</em> whenever I get the chance. </p>
 		  
       <h3 id="chess">Computer Chess</h3>
-      <p> I spent so much time developing many <em>computer chess</em> programs. 
+      <p> I spent so much time developing <em>computer chess</em> programs. 
 		  Here is the <a href="https://sites.google.com/site/dshawul/home">dark side</a> of me!</p>
+		  
+	  <h2 id="codes">Codes</h2>
+	  <ul class="fa-ul">
+	  <li>
+		  <a href="http://github.com/dshawul/solver"><i class="fa-li fa fa-file-text-o"></i></a>
+		  Solver - A finite volume and discontinuous Galerkin solver for fluid flow simulations.
+	  </li>
+	  <li>
+		  <a href="http://github.com/dshawul/StAnD"><i class="fa-li fa fa-file-text-o"></i></a>
+		  StAnD - A linear static/dynamic structural analysis and design program.
+	  </li>
 
     </div>
   </div>
