Update cv and links

--- a/index.html
+++ b/index.html
@@ -305,30 +305,38 @@ This is the parent `<div>` that contains the menu and the content area.
       <ul>
         <li> <b>Current</b>
         <ul class="fa-ul">
-          <li>
-            <a href="http://www.hindawi.com/journals/jcengi/aip/295393"><i class="fa-li fa fa-file-text-o"></i></a>
-            D. Abdi and G. Bitsuamlak, "Asynchronous parallelization of a CFD solver," Journal of Computational Engineering, 2015, (accepted)
-            <a href="http://www.hindawi.com/journals/jcengi/aip/295393">[link]</a>.
-          </li>
 
           <li>
-            <i class="fa-li fa fa-file-text-o"></i>
+			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and G. Bitsuamlak, "Wind flow simulations in idealized built environment
 			models of various level of complexity," <em>Wind and Structures</em>, (under review)
+			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report2.pdf">[link]</a>.
           </li>
 
           <li>
-            <i class="fa-li fa fa-file-text-o"></i>
+            <a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/UnifedCGDG-paper/main.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and F.X. Giraldo, "Efficient Construction of Unified Continuous and Discontinuous
 			Galerkin Formulations for the 3D Euler Equations," 2015 (in preparation)
+			<a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/UnifedCGDG-paper/main.pdf">[link]</a>
           </li>
 		  
           <li>
-            <i class="fa-li fa fa-file-text-o"></i>
+            <a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/gNUMA/main.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and F.X. Giraldo and L. Wilcox and T. Warburton, "A GPU accelerated continuous and
 			discontinuous Galerkin non-hydrostatic atmospheric model," 2015 (in preparation)
+			<a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/gNUMA/main.pdf">[link]</a>
           </li>
         </ul>
+		
+        <li> <b>2015</b>
+        <ul class="fa-ul">
+        <li>
+          <a href="http://dx.doi.org/10.1155/2015/295393"><i class="fa-li fa fa-file-text-o"></i></a>
+          D. Abdi and G. Bitsuamlak, "Asynchronous parallelization of a CFD solver," Journal of Computational Engineering, 2015
+          <a href="http://dx.doi.org/10.1155/2015/295393">10.1155/2015/295393</a>.
+        </li>
+		</ul>
+		
 		
         <li> <b>2014</b>
         <ul class="fa-ul">
