Update cv and links

--- a/index.html
+++ b/index.html
@@ -309,21 +309,21 @@ This is the parent `<div>` that contains the menu and the content area.
           <li>
 			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and G. Bitsuamlak, "Wind flow simulations in idealized built environment
-			models of various level of complexity," <em>Wind and Structures</em>, (under review)
+			models of various level of complexity," <em>Wind and Structures</em>, (Accepted)
 			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report2.pdf">[link]</a>.
           </li>
 
           <li>
             <a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/UnifedCGDG-paper/main.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and F.X. Giraldo, "Efficient Construction of Unified Continuous and Discontinuous
-			Galerkin Formulations for the 3D Euler Equations," 2015 (in preparation)
+			Galerkin Formulations for the 3D Euler Equations," 2015 (Submitted to Journal of Computational Physics)
 			<a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/UnifedCGDG-paper/main.pdf">[link]</a>
           </li>
 		  
           <li>
             <a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/gNUMA/main.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
             D. Abdi and F.X. Giraldo and L. Wilcox and T. Warburton, "A GPU accelerated continuous and
-			discontinuous Galerkin non-hydrostatic atmospheric model," 2015 (in preparation)
+			discontinuous Galerkin non-hydrostatic atmospheric model," 2015 (To be submitted)
 			<a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/gNUMA/main.pdf">[link]</a>
           </li>
         </ul>
