Update cv and links

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@ This is the parent `<div>` that contains the menu and the content area.
 
           <li>
 			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
-            D. Abdi and G. Bitsuamlak, "Wind flow simulations in idealized built environment
-			models of various level of complexity," <em>Wind and Structures</em>, (Accepted)
-			<a href="https://dl.dropboxusercontent.com/u/55295461/thesis/my_journals/rough/report2.pdf">[link]</a>.
+            D. Abdi and G. Bitsuamlak, "Wind flow simulations in idealized and real built environments
+			with models of various level of complexity," <em>Wind and Structures</em>, vol. 22, no. 4, pp. 503–524, 2016. DOI:
+			<a href="http://dx.doi.org/10.12989/was.2016.22.4.503">10.12989/was.2016.22.4.503</a>.
           </li>
 
           <li>
