Update cv and links

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ This is the parent `<div>` that contains the menu and the content area.
             
           <li>
             <a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/IMEX/main.pdf"><i class="fa-li fa fa-file-text-o"></i></a>
-            D. Abdi and F.X. Giraldo and L. Wilcox and T. Warburton, "Acceleration of a Semi-Implicit Non-hydrostatic Atmospheric Model on manycore processors," 2016 (To be submitted)
+            D. Abdi and F.X. Giraldo and  Emil M. Constantinescu and Lester E. Carr III and L. Wilcox and T. Warburton, "Acceleration of a Semi-Implicit Non-hydrostatic Unified Model of the Atmospheric (NUMA) on manycore processors," 2016 (To be submitted)
 			<a href="https://dl.dropboxusercontent.com/u/55295461/post-doc%20research/IMEX/main.pdf">[link]</a>
           </li>
     
